feat: add CRUD operations for nested tabs and update tab mapper and search criteria logic.